@@ -1,8 +1,11 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.220 2006/02/05 20:42:10 allanonjl Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/src/fe/gtk/ChangeLog,v 1.221 2006/02/06 20:15:55 agaffney Exp $
 
 *GLI-gtkfe-0.3 (27 Oct 2005)
+
+  6 Feb 2006; Andrew Gaffney <agaffney@gentoo.org>
+  KEYMAP and CONSOLEFONT default to blank in OtherSettings.py
 
   5 Feb 2006; John N. Laliberte <allanonjl@gentoo.org>
   OtherSettings.py: Replacement for rc.conf screen.
